@@ -1,5 +1,6 @@
 package net.minecraft.world.level.levelgen.flat;
 
+import com.google.common.collect.ImmutableSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -80,7 +81,7 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.CLASSIC_FLAT,
 				Blocks.GRASS_BLOCK,
 				Biomes.PLAINS,
-				Set.of(BuiltinStructureSets.VILLAGES),
+				ImmutableSet.of(BuiltinStructureSets.VILLAGES),
 				false,
 				false,
 				new FlatLayerInfo(1, Blocks.GRASS_BLOCK),
@@ -91,7 +92,7 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.TUNNELERS_DREAM,
 				Blocks.STONE,
 				Biomes.WINDSWEPT_HILLS,
-				Set.of(BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS),
+				ImmutableSet.of(BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS),
 				true,
 				false,
 				new FlatLayerInfo(1, Blocks.GRASS_BLOCK),
@@ -103,7 +104,7 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.WATER_WORLD,
 				Items.WATER_BUCKET,
 				Biomes.DEEP_OCEAN,
-				Set.of(BuiltinStructureSets.OCEAN_RUINS, BuiltinStructureSets.SHIPWRECKS, BuiltinStructureSets.OCEAN_MONUMENTS),
+				ImmutableSet.of(BuiltinStructureSets.OCEAN_RUINS, BuiltinStructureSets.SHIPWRECKS, BuiltinStructureSets.OCEAN_MONUMENTS),
 				false,
 				false,
 				new FlatLayerInfo(90, Blocks.WATER),
@@ -117,7 +118,7 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.OVERWORLD,
 				Blocks.GRASS,
 				Biomes.PLAINS,
-				Set.of(
+				ImmutableSet.of(
 					BuiltinStructureSets.VILLAGES,
 					BuiltinStructureSets.MINESHAFTS,
 					BuiltinStructureSets.PILLAGER_OUTPOSTS,
@@ -135,7 +136,7 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.SNOWY_KINGDOM,
 				Blocks.SNOW,
 				Biomes.SNOWY_PLAINS,
-				Set.of(BuiltinStructureSets.VILLAGES, BuiltinStructureSets.IGLOOS),
+				ImmutableSet.of(BuiltinStructureSets.VILLAGES, BuiltinStructureSets.IGLOOS),
 				false,
 				false,
 				new FlatLayerInfo(1, Blocks.SNOW),
@@ -148,7 +149,7 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.BOTTOMLESS_PIT,
 				Items.FEATHER,
 				Biomes.PLAINS,
-				Set.of(BuiltinStructureSets.VILLAGES),
+				ImmutableSet.of(BuiltinStructureSets.VILLAGES),
 				false,
 				false,
 				new FlatLayerInfo(1, Blocks.GRASS_BLOCK),
@@ -159,7 +160,7 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.DESERT,
 				Blocks.SAND,
 				Biomes.DESERT,
-				Set.of(BuiltinStructureSets.VILLAGES, BuiltinStructureSets.DESERT_PYRAMIDS, BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS),
+				ImmutableSet.of(BuiltinStructureSets.VILLAGES, BuiltinStructureSets.DESERT_PYRAMIDS, BuiltinStructureSets.MINESHAFTS, BuiltinStructureSets.STRONGHOLDS),
 				true,
 				false,
 				new FlatLayerInfo(8, Blocks.SAND),
@@ -171,14 +172,14 @@ public class FlatLevelGeneratorPresets {
 				FlatLevelGeneratorPresets.REDSTONE_READY,
 				Items.REDSTONE,
 				Biomes.DESERT,
-				Set.of(),
+				ImmutableSet.of(),
 				false,
 				false,
 				new FlatLayerInfo(116, Blocks.SANDSTONE),
 				new FlatLayerInfo(3, Blocks.STONE),
 				new FlatLayerInfo(1, Blocks.BEDROCK)
 			);
-			return this.register(FlatLevelGeneratorPresets.THE_VOID, Blocks.BARRIER, Biomes.THE_VOID, Set.of(), true, false, new FlatLayerInfo(1, Blocks.AIR));
+			return this.register(FlatLevelGeneratorPresets.THE_VOID, Blocks.BARRIER, Biomes.THE_VOID, ImmutableSet.of(), true, false, new FlatLayerInfo(1, Blocks.AIR));
 		}
 	}
 }
